cmake_minimum_required(VERSION 3.0.2)
project(assist)

find_package(catkin REQUIRED COMPONENTS
  multirole
  motion
  utils
)

catkin_package(
 INCLUDE_DIRS include
)

include_directories(
include
  ${catkin_INCLUDE_DIRS}
)

## Declare a C++ library
add_library(${PROJECT_NAME}_lib src/${PROJECT_NAME}.cpp)
target_link_libraries(${PROJECT_NAME}_lib ${catkin_LIBRARIES} multirole_lib motion_lib utils_lib)