<?xml version="1.0"?>
<package format="2">
  <name>assist</name>
  <version>0.0.0</version>
  <description>The assist package</description>
  <maintainer email="danen@todo.todo">danen</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>multirole</build_depend>
  <build_depend>motion</build_depend>
  <build_depend>utils</build_depend>

  <export>

  </export>
</package>
